force-app/main/default/objects/Log_Email_Service__c/Log_Email_Service__c.object-meta.xml
<CustomObject>
    <label>Log Email Service</label>
    <nameField>
        <displayFormat>LEM-{00000}</displayFormat>
        <label>Log Email Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs Email Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>