force-app/main/default/objects/Log_Email_Service__c/fields/Contenido__c.field-meta.xml
<CustomField>
    <fullName>Contenido__c</fullName>
    <label>Contenido</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>