force-app/main/default/objects/Log_Email_Service__c/fields/Fecha_del_Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_Mensaje__c</fullName>
    <label>Fecha del Mensaje</label>
    <type>DateTime</type>
</CustomField>