force-app/main/default/objects/Log_Email_Service__c/fields/Id_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Id_Relacionado__c</fullName>
    <label>Id Relacionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>