force-app/main/default/objects/Log_Email_Service__c/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <label>Objeto</label>
    <length>244</length>
    <type>Text</type>
</CustomField>