force-app/main/default/objects/Log_Email_Service__c/fields/Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Status_Check__c</fullName>
    <formula>IF(Estado__c == &apos;OK&apos;,
			&apos;✅&apos;,
			&apos;🔴&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Check</label>
    <type>Text</type>
</CustomField>